--- a/index.html
+++ b/index.html
@@ -2,103 +2,125 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>SmartBuy.ind</title>
+<title>SMARTBUY.IND</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
 body{margin:0;font-family:Arial;background:#0d0dde}
 
-/* ===== HEADER ===== */
+/* HEADER */
 header{
 position:fixed;top:0;width:100%;z-index:10;
 background:#2209c2;padding:10px;
 display:flex;align-items:center;justify-content:space-between;
 box-shadow:0 2px 5px rgba(0,0,0,.2)
 }
-header img{height:38px}
-.brand{
-font-size:20px;
-font-weight:900;
-letter-spacing:1px;
-color:#fff
+header img{height:35px;cursor:pointer}
+.brand-name{
+font-size:20px;font-weight:bold;color:#fff;letter-spacing:1px
 }
-#userTop{font-size:13px;color:#fff}
+#userTop{color:#fff;font-size:14px}
 
-/* ===== MAIN ===== */
-.main{padding-top:75px;padding-bottom:75px}
+/* MAIN */
+.main{padding-top:70px;padding-bottom:150px}
 
-/* ===== CATEGORIES ===== */
-.categories{
-display:flex;overflow-x:auto;background:#fff;padding:10px
+/* SEARCH */
+.search-box {
+    padding: 10px;
+    background: #fff;
+    position: sticky;
+    top: 60px; 
+    z-index: 9;
 }
-.cat{
-min-width:90px;text-align:center;margin-right:10px;
-cursor:pointer
+.search-box input {
+    width: 95%;
+    padding: 10px;
+    border: 2px solid #eee;
+    background: #f5f5f5;
+    border-radius: 25px;
+    outline: none;
+    font-size: 14px;
+    display: block;
+    margin: 0 auto;
 }
+.search-box input:focus {
+    border-color: #2209c2;
+    background: #fff;
+}
+
+/* CATEGORIES */
+.categories{display:flex;overflow-x:auto;background:#fff;padding:10px;border-top:1px solid #eee}
+.cat{min-width:90px;text-align:center;margin-right:10px;cursor:pointer}
 .cat img{width:60px;height:60px;border-radius:50%;object-fit:cover}
 .cat p{font-size:12px;margin:5px 0 0}
 
-/* ===== SUB CATEGORIES ===== */
-.subcats{
-display:flex;overflow-x:auto;padding:6px;background:#fff
-}
+.subcats{display:flex;overflow-x:auto;padding:5px;background:#fff}
 .subcats div{
-padding:6px 14px;background:#eee;border-radius:20px;
+padding:6px 12px;background:#eee;border-radius:20px;
 margin-right:8px;font-size:12px;cursor:pointer
 }
 
-/* ===== PRODUCTS ===== */
+/* PRODUCTS */
 .products{
-display:grid;grid-template-columns:repeat(2,1fr);
+display:grid;
+grid-template-columns:repeat(2,1fr);
 gap:10px;padding:10px
 }
 .card{
 background:#fff;border-radius:10px;overflow:hidden;
-box-shadow:0 2px 4px rgba(0,0,0,.15)
+box-shadow:0 2px 4px rgba(0,0,0,.1)
 }
-
-/* IMAGE SLIDER */
-.slider{position:relative}
 .slider img{
-width:100%;
-height:265px;        /* ≈ 7cm */
-object-fit:contain;
-background:#fff;
-cursor:pointer
+width:100%;height:200px;object-fit:cover;cursor:pointer
 }
-.dots{
-position:absolute;bottom:6px;width:100%;text-align:center
-}
-.dots span{
-height:6px;width:6px;border-radius:50%;
-background:#ccc;display:inline-block;margin:0 2px
-}
-.dots .active{background:#ff5722}
-
-.card h4{font-size:14px;margin:6px}
-.price{color:green;font-weight:bold;margin-left:6px}
+.card h4{font-size:14px;margin:5px}
+.price{color:green;font-weight:bold;margin-left:5px}
 .cut{text-decoration:line-through;color:#888;font-size:12px}
-.off{color:red;font-size:12px;margin-left:6px}
+.off{color:red;font-size:12px;margin-left:5px}
 
-.actions{
-display:flex;justify-content:space-between;padding:6px
-}
+.actions{display:flex;padding:5px}
 .actions button{
-flex:1;margin:2px;border:none;padding:7px;
-border-radius:5px;font-size:12px;cursor:pointer
+flex:1;margin:2px;border:none;padding:8px;
+border-radius:5px;font-size:13px;cursor:pointer
 }
 .buy{background:#ff5722;color:#fff}
 .wish{background:#eee}
 
-/* ===== BOTTOM NAV ===== */
-.nav{
-position:fixed;bottom:0;width:100%;background:#fff;
-display:flex;justify-content:space-around;
-padding:8px 0;box-shadow:0 -2px 5px rgba(0,0,0,.2)
+/* DONATE + INSTA */
+.extra-box{
+background:#fff;margin:10px;border-radius:12px;
+padding:15px;text-align:center;
+box-shadow:0 2px 5px rgba(0,0,0,.1)
 }
-.nav div{font-size:12px;cursor:pointer}
+.extra-box h3{margin:5px 0;color:#2209c2}
+.extra-box p{font-size:13px;color:#333}
 
-/* ===== FULLSCREEN IMAGE ===== */
+.donate-btn{
+background:linear-gradient(45deg,#ff5722,#ff9800);
+color:#fff;border:none;padding:10px 20px;
+border-radius:25px;font-size:14px;cursor:pointer
+}
+
+.insta-btn{
+display:flex;align-items:center;justify-content:center;
+gap:8px;background:#e1306c;color:#fff;
+padding:10px;border-radius:25px;
+text-decoration:none;font-weight:bold
+}
+.insta-btn img{height:20px}
+
+/* NAV */
+.nav{
+position:fixed;bottom:0;width:100%;
+background:#fff;display:flex;
+justify-content:space-around;
+padding:15px 0;
+box-shadow:0 -2px 5px rgba(0,0,0,.2)
+}
+.nav div{text-align:center;font-size:14px;font-weight:bold}
+.nav span{display:block;font-size:24px}
+
+/* FULLSCREEN */
 .fullscreen{
 position:fixed;inset:0;background:#000;
 display:none;align-items:center;justify-content:center;z-index:99
@@ -111,21 +133,40 @@ display:none;align-items:center;justify-content:center;z-index:99
 
 <header>
 <img src="https://i.ibb.co/8DbgQ53J/file-000000002c787209a2c8df5f2b17d7b5.png" onclick="openAdmin()">
-<div class="brand">SMARTBUY.IND</div>
+<div class="brand-name">SMARTBUY.IND</div>
 <div id="userTop">Guest</div>
 </header>
 
 <div class="main">
+
+<div class="search-box">
+    <input type="text" id="searchInput" placeholder="Search for products..." onkeyup="handleSearch()">
+</div>
+
 <div class="categories" id="categories"></div>
 <div class="subcats" id="subcats"></div>
 <div class="products" id="products"></div>
+
+<div class="extra-box">
+<h3>💖 Support SmartBuy</h3>
+<p>Aapka chhota sa support hamare kaam ko aage badhata hai 🙏</p>
+<button class="donate-btn" onclick="donate()">Donate Now</button>
+</div>
+
+<div class="extra-box">
+<h3>📸 Follow on Instagram</h3>
+<a class="insta-btn" href="https://instagram.com/smartbuy.ind" target="_blank">
+<img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png">
+@smartbuy.ind
+</a>
+</div>
+
 </div>
 
 <div class="nav">
-<div onclick="goHome()">🏠 Home</div>
-<div onclick="showWishlist()">❤️ Wishlist</div>
-<div onclick="showAccount()">👤 Account</div>
-<div onclick="donate()">💝 Donate</div>
+<div onclick="goHome()"><span>🏠</span>Home</div>
+<div onclick="showWishlist()"><span>❤️</span>Wishlist</div>
+<div onclick="showAccount()"><span>👤</span>Account</div>
 </div>
 
 <div class="fullscreen" id="fullscreen" onclick="this.style.display='none'">
@@ -133,11 +174,11 @@ display:none;align-items:center;justify-content:center;z-index:99
 </div>
 
 <script>
-/* ===== USER ===== */
+/* USER */
 let user=JSON.parse(localStorage.getItem("user"))||null;
-if(user){userTop.innerText=user.name}
+if(user){document.getElementById("userTop").innerText=user.name}
 
-/* ===== DATA ===== */
+/* CATEGORIES */
 const cats=[
 {name:"For You",img:"https://i.ibb.co/NndQSBVw/3d-shopping-bag-with-percent-sign-isolated-render-realistic-gift-bag-sale-discount-or-clearance-conc.jpg"},
 {name:"Fashion",img:"https://i.ibb.co/VYGS3DQb/51d9ea827ad3d9f0ca52103c47351dd8.jpg",sub:["Men","Women"]},
@@ -145,10 +186,10 @@ const cats=[
 {name:"Electronics",img:"https://i.ibb.co/4ZJ9SSW7/screens-isometric-electronic-devices-23-2147647441.jpg"}
 ];
 
-const products=[
+/* PRODUCTS */
+const productData=[
 {
-name:"Premium Backpack Encrypted",
-cat:"Bags",
+name:"Premium Backpack Encrypted",cat:"Bags",sub:"",
 price:322,cut:999,
 link:"https://bitli.in/JZizUxb",
 imgs:[
@@ -157,11 +198,8 @@ imgs:[
 "https://i.ibb.co/tkxs7w0/IMG-20260128-215957.jpg"
 ]
 },
-
 {
-name:"MEN Full sleeve striped sweatshirt",
-cat:"Fashion",
-sub:"Men",
+name:"MEN Full sleeve striped sweatshirt",cat:"Fashion",sub:"Men",
 price:299,cut:1499,
 link:"https://fktr.in/trid8uL",
 imgs:[
@@ -170,11 +208,8 @@ imgs:[
 "https://i.ibb.co/LdSbDw4C/Screenshot-2026-01-28-23-28-28-456-com-flipkart-android-edit.jpg"
 ]
 },
-
 {
-name:"Women Floral Kurti",
-cat:"Fashion",
-sub:"Women",
+name:"Women Floral Kurti",cat:"Fashion",sub:"Women",
 price:253,cut:1999,
 link:"https://bitli.in/mYd26le",
 imgs:[
@@ -183,11 +218,8 @@ imgs:[
 "https://i.ibb.co/svt2y75W/Screenshot-2026-01-28-20-43-22-071-com-flipkart-shopsy-edit.jpg"
 ]
 },
-
 {
-name:"Men Regular Fit Trousers",
-cat:"Fashion",
-sub:"Men",
+name:"Men Regular Fit Trousers",cat:"Fashion",sub:"Men",
 price:262,cut:999,
 link:"https://bitli.in/w8hSXkv",
 imgs:[
@@ -197,16 +229,14 @@ imgs:[
 }
 ];
 
+let curCat="For You", curSub="", searchQuery="";
+const productsEl = document.getElementById('products');
 
-let curCat="For You",curSub="",slideIndex={};
-
-/* ===== RENDER ===== */
 function renderCats(){
 categories.innerHTML="";
-cats.forEach(c=>{
-categories.innerHTML+=`
-<div class="cat" onclick="setCat('${c.name}')">
-<img src="${c.img}"><p>${c.name}</p></div>`;
+cats.forEach(x=>{
+categories.innerHTML += `<div class="cat" onclick="setCat('${x.name}')">
+<img src="${x.img}"><p>${x.name}</p></div>`;
 });
 }
 
@@ -214,84 +244,79 @@ function renderSub(){
 subcats.innerHTML="";
 let f=cats.find(x=>x.name==curCat);
 if(f && f.sub){
-f.sub.forEach(s=>{
-subcats.innerHTML+=`<div onclick="setSub('${s}')">${s}</div>`;
+f.sub.forEach(x=>{
+subcats.innerHTML += `<div onclick="setSub('${x}')">${x}</div>`;
 });
 }
 }
 
 function renderProd(){
-productsBox=document.getElementById("products");
-productsBox.innerHTML="";
-products.filter((p,i)=>{
-return (curCat=="For You"||p.cat==curCat)&&(curSub==""||p.sub==curSub);
-}).forEach((p,i)=>{
-slideIndex[i]=0;
-let off=Math.round((1-p.price/p.cut)*100);
-productsBox.innerHTML+=`
+productsEl.innerHTML="";
+productData.filter(x=>{
+let matchCat = (curCat=="For You"||x.cat==curCat) && (curSub==""||x.sub==curSub);
+let matchSearch = x.name.toLowerCase().includes(searchQuery);
+return matchCat && matchSearch;
+}).forEach((x,i)=>{
+let off=Math.round((1-x.price/x.cut)*100);
+productsEl.innerHTML += `
 <div class="card">
-<div class="slider" onclick="openFull('${p.imgs[slideIndex[i]]}')">
-<img src="${p.imgs[0]}" id="img${i}">
-<div class="dots">
-${p.imgs.map((_,d)=>`<span ${d==0?'class="active"':''}></span>`).join("")}
+<div class="slider">
+<img src="${x.imgs[0]}" onclick="openFull('${x.imgs[0]}')">
 </div>
-</div>
-<h4>${p.name}</h4>
+<h4>${x.name}</h4>
 <div>
-<span class="price">₹${p.price}</span>
-<span class="cut">₹${p.cut}</span>
+<span class="price">₹${x.price}</span>
+<span class="cut">₹${x.cut}</span>
 <span class="off">${off}% OFF</span>
 </div>
 <div class="actions">
 <button class="wish" onclick="addWish(${i})">❤️</button>
-<button class="buy" onclick="window.open('${p.link}')">Buy</button>
+<button class="buy" onclick="window.open('${x.link}','_blank')">Buy</button>
 </div>
 </div>`;
 });
 }
 
-function setCat(c){curCat=c;curSub="";renderSub();renderProd()}
-function setSub(s){curSub=s;renderProd()}
-function goHome(){curCat="For You";curSub="";renderSub();renderProd()}
+function setCat(x){curCat=x;curSub="";renderSub();renderProd();}
+function setSub(x){curSub=x;renderProd();}
+function goHome(){curCat="For You"; curSub=""; searchQuery=""; document.getElementById('searchInput').value=""; renderSub(); renderProd();}
+function handleSearch(){searchQuery=document.getElementById('searchInput').value.toLowerCase(); renderProd();}
+function openFull(i){fullImg.src=i;fullscreen.style.display='flex';}
 
-/* ===== FULLSCREEN ===== */
-function openFull(src){
-fullImg.src=src;
-fullscreen.style.display="flex";
-}
-
-/* ===== WISHLIST ===== */
+/* WISHLIST */
 function addWish(i){
 let w=JSON.parse(localStorage.getItem("wish"))||[];
-w.push(products[i]);
+w.push(productData[i]);
 localStorage.setItem("wish",JSON.stringify(w));
 alert("Added to Wishlist ❤️");
 }
 function showWishlist(){
 let w=JSON.parse(localStorage.getItem("wish"))||[];
-alert("Wishlist items: "+w.length);
+if(w.length==0){alert("Wishlist is empty"); return;}
+alert("Wishlist Items:\n"+w.map(x=>x.name).join("\n"));
 }
 
-/* ===== ACCOUNT ===== */
+/* ACCOUNT */
 function showAccount(){
 let n=prompt("Enter Name");
 let p=prompt("Enter Phone");
 if(n&&p){
 localStorage.setItem("user",JSON.stringify({name:n,phone:p}));
-location.reload();
+document.getElementById("userTop").innerText=n;
+alert("Account saved!");
 }
 }
 
-/* ===== ADMIN ===== */
+/* ADMIN */
 function openAdmin(){
 let u=prompt("Username");
 let p=prompt("Password");
-if(u=="9343988416"&&p=="1234"){
-alert("Admin Analytics\nProducts: "+products.length);
-}
+if(u=="9343988416" && p=="1234"){
+alert("Admin Analytics\nProducts:"+productData.length+"\nCategories:"+cats.length);
+}else alert("Invalid credentials");
 }
 
-/* ===== DONATE ===== */
+/* DONATE */
 function donate(){
 location.href="upi://pay?pa=9343988416-2@ybl&pn=SmartBuy%20Foundation";
 }
